--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
     </header>
     <main class="home-main">
         <section>
-            <p class="home-main-text">Conoce las novedades y noticias del Mundo Tech</p>
+            <p class="home-main-text">Conoce mi aventura en Platzi Master</p>
             <button class="home-main-button">
                 <a href="blogs.html">¡Entra ya!</a>
             </button>
         </section>
     </main>
 </body>
+<footer>
+    <span class="footer-text"> Todos los derechos reservados<img class="footer-img" src="assets/img/logo-blanco.png" alt="Logo del Blog"></span>
+</footer>
 </html>
