--- a/perfil.html
+++ b/perfil.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Blog</title>
+    <title>¿Quien soy?</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/media-queries.css">
     <link rel="stylesheet" href="css/font/flaticon.css">
@@ -44,52 +44,67 @@
         <section class="profile-main-container">
             <div class="grid-container profile-container">
                 <div>
-                    <img src="https://lh3.googleusercontent.com/ogw/ADGmqu-InZXyFMtmH9DTNnu8TMNLwAT4HpHZkfQyU5ZS=s32-c-mo" alt="">
+                    <img src="assets/img/Imagen de perfil.jpg" alt="">
                 </div>
                 <div>
-                    <h2>Hola, mi nombre es Heyner Javier Marmol</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil dignissimos cumque earum deserunt ipsa alias. Commodi odio porro voluptatum corporis.</p>
+                    <h2>Hola, mi nombre es Paola Porras</h2>
+                    <p>Actualmente soy Tecnologa en Producción de Multimedia, dedicada principalmente al desarrollo y maquetación web.</p>
+                    <p>un dato curioso es que sin pensarlo ni esperarlo, fui seleccionada para ser parte de Platzi master, oportunidad que con mucho miedo, alegria, nervios e incertidumbre lo me arriesgue.</p>
+                    <p>Pocas personas conocen que sufro de depresión y ansiedad, medicamente comprobado y diagnnosticado, asi que imaginate mi duelo mental con el tema.</p>
+                    <br>
+                    <h3><strong>Filosofia de vida:</strong></h3>
+                    <ul>
+                        <li>Dale tiempo al tiempo, que tiempo tiempo nos da, y el mismo nos desengañara.</li>
+                        <li>Nunca permitas que tus dudas sean mas grandes que tus sueños</li>
+                        <li> Esta en especial se la debo a mi coach Diego Maury, la cual comence  a aplicar y quedo arregada a mi... <br>
+                        Aveces solo hace falta un salto de fe</li>
+                    </ul>
                 </div>
             </div>
         </section>
         <section class="profile-main-projects">
             <div class="grid-container">
-                <h3>Proyectos</h3>
+                <h3>Experiencia</h3>
                 <div class="projects-main-container">
                     <article class="projects-container">
-                        <h4>Titulo</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus delectus, tempore, aperiam sapiente quod magnam explicabo repellendus doloremque corrupti error suscipit commodi sed cupiditate expedita molestias.</p>
+                        <h4>Marketing digital y manejo de redes</h4>
+                        <p>En mi trayectoria pude conocer a Diana y Esteban grandes profesionales del aréa los cuales me permitieron trabajar a su lado clientes como Atlas Copco, Buen Vivir, Shaman, entre otros. Donde pude aprender y poner en practica herramientas de optimización, flujo de automatización, Inbound marketing.</p>
                     </article>
                     <article class="projects-container">
-                        <h4>Titulo</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus delectus, tempore, aperiam sapiente quod magnam explicabo repellendus doloremque corrupti error suscipit commodi sed cupiditate expedita molestias.</p>
+                        <h4>Diseño gráfico y web</h4>
+                        <p>He podido hacer varias piezas graficas y edición de fotografia la cual implemento en sitios web que desarrollo, en redes sociales y pronto espero poder incorporar este conocimiento para la creación de mi marca personal.</p>
                     </article>
                     <article class="projects-container">
-                        <h4>Titulo</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusamus delectus, tempore, aperiam sapiente quod magnam explicabo repellendus doloremque corrupti error suscipit commodi sed cupiditate expedita molestias.</p>
+                        <h4>Desarrollo web</h4>
+                        <p>"El mistico mundo donde se juega a ser dioses constantemente"</p>
+                        <p> No se si la frase sea la mas apropiada, pero para mi representa todo lo que amo, me apasiona, en cada linea de codigo, cada pagina, cada detalle, hace cosas sosprendes</p>
                     </article>
                 </div>
             </div>
+        </section>
+        <section class=container-center>
+            <h4>Sabes...Para mi no hay mayor satisfacción de ver como logro algo nuevo, cada lenguaje es un mundo diferente, cada pagina envuelve una historia, un porque, un sueño, una realidad. Uff en fin, resumo en que puedo pasar horas y horas maquetando, codificando, o simplemente preparando la grafica que usare, sin sentir cansancio, es mas aveces se convierte en algo terapeutico.</h4>
+            <p></p>
         </section>
         <section class="contact-main-container">
             <div>
                 <img src="assets/img/013-newsletter.png" alt="">
                 <div class="contact-left">
                     <a href="/">Contacto</a>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, libero deleniti ut repudiandae minima.</p>
+                    <p>Puedes contactarme atraves de mi pagina web www.paolaporras.com , o en linkeding como @paolaporras allí estaré para responderte y tener una amena platica.</p>
                 </div>
             </div>
             <div>
                 <img src="assets/img/006-like.png" alt="">
                 <div class="contact-right">
-                    <a href="/">Escribe</a>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis.</p>
+                    <a href="/">Mi diario de Platzi Master</a>
+                    <p>He creado un espacio donde puedes conocer día a día como recorro esta aventura, y de paso aprendemos ambos en el camino.</p>
                 </div>
             </div>
         </section>
     </main>
     <footer>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+        <span class="footer-text"> Todos los derechos reservados<img class="footer-img" src="assets/img/logo-blanco.png" alt="Logo del Blog"></span>
     </footer>
 </body>
 </html>
